--- a/fitbook-ios/Base.lproj/Main.storyboard
+++ b/fitbook-ios/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Gh1-gS-V1h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Gh1-gS-V1h">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -74,7 +75,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <button key="tableFooterView" opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ns1-sp-CHq">
+                        <button key="tableFooterView" opaque="NO" contentMode="scaleAspectFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ns1-sp-CHq">
                             <rect key="frame" x="0.0" y="153" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
@@ -154,10 +155,12 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1Xb-pj-Vb9">
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyu-xS-s2D">
-                                <rect key="frame" x="36" y="548" width="302" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyu-xS-s2D" userLabel="Find Button">
+                                <rect key="frame" x="16" y="549" width="343" height="45"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="v14-9Q-CSr"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                 <state key="normal" title="Find gym close to me"/>
                                 <userDefinedRuntimeAttributes>
@@ -169,23 +172,37 @@
                                     <action selector="findCloseGym:" destination="jn2-5b-jmn" eventType="touchUpInside" id="ufE-uh-VAX"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xsw-qg-cdX" userLabel="Facebook View">
+                                <rect key="frame" x="16" y="492" width="343" height="45"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="O28-hG-vD2"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="top" secondItem="r42-Pa-I1E" secondAttribute="bottom" id="OZ0-SG-UzL"/>
-                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="leading" secondItem="5be-2m-x16" secondAttribute="leading" id="TME-WZ-nIN"/>
-                            <constraint firstAttribute="trailing" secondItem="1Xb-pj-Vb9" secondAttribute="trailing" id="ZcJ-TL-Lqo"/>
-                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="bottom" secondItem="AWV-1X-l3w" secondAttribute="top" id="dA9-dM-XN3"/>
+                            <constraint firstItem="qyu-xS-s2D" firstAttribute="top" secondItem="Xsw-qg-cdX" secondAttribute="bottom" constant="12" id="6iV-yw-A0p"/>
+                            <constraint firstItem="AWV-1X-l3w" firstAttribute="top" secondItem="qyu-xS-s2D" secondAttribute="bottom" constant="24" id="HmL-Yh-s8j"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="top" secondItem="r42-Pa-I1E" secondAttribute="bottom" id="Rm0-Zq-rl3"/>
+                            <constraint firstItem="Xsw-qg-cdX" firstAttribute="trailing" secondItem="qyu-xS-s2D" secondAttribute="trailing" id="ZBt-dG-daI"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="leading" secondItem="5be-2m-x16" secondAttribute="leading" id="j1G-wF-YvR"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="bottom" secondItem="AWV-1X-l3w" secondAttribute="top" id="jZp-9b-t01"/>
+                            <constraint firstItem="qyu-xS-s2D" firstAttribute="leading" secondItem="5be-2m-x16" secondAttribute="leadingMargin" id="sYs-Y5-ch0"/>
+                            <constraint firstItem="qyu-xS-s2D" firstAttribute="trailing" secondItem="5be-2m-x16" secondAttribute="trailingMargin" id="ua1-Qh-7ir"/>
+                            <constraint firstItem="qyu-xS-s2D" firstAttribute="leading" secondItem="Xsw-qg-cdX" secondAttribute="leading" id="v3B-my-zN0"/>
+                            <constraint firstAttribute="trailing" secondItem="1Xb-pj-Vb9" secondAttribute="trailing" id="vsN-X0-Fk1"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Mapa" image="Map" id="Xmq-ZK-f11" userLabel="Map"/>
                     <connections>
+                        <outlet property="facebookView" destination="Xsw-qg-cdX" id="auz-j6-MA4"/>
                         <outlet property="mapView" destination="1Xb-pj-Vb9" id="Mfn-XG-9N2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1yQ-fD-Qel" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032.8" y="35.532233883058474"/>
+            <point key="canvasLocation" x="3602" y="116"/>
         </scene>
         <!--My gyms-->
         <scene sceneID="RjV-T3-Efm">
